resolved issues with duplcate social icons, scroll jump, display padding

--- a/style/style.css
+++ b/style/style.css
@@ -111,3 +111,12 @@ h3{
 a:hover {
     opacity: 0.5;
 }
+
+ul{
+    padding: 2%;
+    line-height: 1.5em;
+}
+li {
+    padding: 2%;
+    line-height: 1.5em;
+}
